# game_of_life

./: .gitignore  CMakeLists.txt  README.md
src/: game_of_life.c
src/presets/: cow.txt  ship.txt  test.txt
